fix: booking.css set wrong margin

--- a/static/css/booking.css
+++ b/static/css/booking.css
@@ -112,6 +112,8 @@
     display: flex;
     flex-wrap: wrap;
     position: relative;
+    column-gap: 30px;
+    row-gap: 30px;
 }
 
 .group-attraction__image-box{
@@ -129,11 +131,13 @@
 .group-attraction__info-box{
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: top;
     row-gap: 10px;
 }
 
 .info-box__title{
+    height: 24px;
+
     margin-bottom: 10px;
     font-family: Noto Sans TC;
     font-size: 16px;
@@ -145,6 +149,8 @@
 }
 
 .info-box__row{
+    height: 24px;
+
     word-break: break-all;
     word-wrap: break-word;
     display: flex;
